# JuarezGO

./: .gitignore  main.py  pyproject.toml
JuarezGo/: main.py  pyproject.toml
src/controller/: TareaController.py  UserController.py
src/controllers/: TareaController.py  UserController.py
src/database/: registro.sql
src/models/: UserModel.py  databaseModel.py  schemasModel.py
src/tarea.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/view/: LoginView.py  dashboardView.py
