[project]
name = "tarea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flet>=0.82.2",
    "mysql-connector-python>=9.6.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
# Esto permite ejecutar tu app simplemente escribiendo 'app' en la terminal
app = "main:main"

[tool.uv]
# Si tu archivo main.py está en la raíz, cambia esto a false. 
# Si tu código está dentro de una carpeta llamada 'src', déjalo en true.
package = false 

[tool.setuptools]
# Esta es la forma correcta de decirle a Python dónde buscar el código
package-dir = {"" = "src"}